[package]
name = "space_madness_404"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4"
nalgebra = { version = "0.32", features = ["convert-glam021"] }
rapier2d = "0.18"
bincode = "1.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
